# filtermusic-headless

./: CMakeLists.txt  README.md  filtermusic-headless_en_150.ts  main.cpp
src/: main.cpp  server.cpp  server.h  serverthread.cpp  serverthread.h
src/audio/: audioplayer.cpp  audioplayer.h  lfdaudiomedia.cpp  lfdaudiomedia.h
